RESOLVED FIXED147854
[iOS WK2] ASSERT(!m_properties.backingStore || owner()) sometimes on zooming
https://bugs.webkit.org/show_bug.cgi?id=147854
Summary [iOS WK2] ASSERT(!m_properties.backingStore || owner()) sometimes on zooming
Simon Fraser (smfr)
Reported 2015-08-10 16:31:38 PDT
[iOS WK2] ASSERT(!m_properties.backingStore || owner()) sometimes on zooming
Attachments
Patch (1.56 KB, patch)
2015-08-10 16:33 PDT, Simon Fraser (smfr)
no flags
Better fix. (9.83 KB, patch)
2015-08-11 19:33 PDT, Simon Fraser (smfr)
thorton: review+
commit-queue: commit-queue-
Simon Fraser (smfr)
Comment 1 2015-08-10 16:33:49 PDT
Tim Horton
Comment 2 2015-08-11 10:28:33 PDT
Comment on attachment 258672 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=258672&action=review > Source/WebCore/platform/graphics/ca/TileGrid.cpp:54 > + Does TileGrid add the container to the layer tree? Shouldn't whoever does that clean this up? It's a little weird that it's in the destructor.
Simon Fraser (smfr)
Comment 3 2015-08-11 19:33:28 PDT
Created attachment 258793 [details] Better fix.
Tim Horton
Comment 4 2015-08-11 20:46:33 PDT
Comment on attachment 258793 [details] Better fix. Excellent.
WebKit Commit Bot
Comment 5 2015-08-11 21:05:37 PDT
Comment on attachment 258793 [details] Better fix. Rejecting attachment 258793 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-01', 'validate-changelog', '--check-oops', '--non-interactive', 258793, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://webkit-queues.webkit.org/results/47383
Simon Fraser (smfr)
Comment 6 2015-08-11 22:00:38 PDT
Note You need to log in before you can comment on or make changes to this bug.