Source/WebCore/platform/graphics/ca/TileController.cpp
@@ -93,7 +93,7 @@ void TileController::tileCacheLayerBoundsChanged()
 void TileController::setNeedsDisplay()
 {
     tileGrid().setNeedsDisplay();
-    m_zoomedOutTileGrid = nullptr;
+    clearZoomedOutTileGrid();
 }
 
 void TileController::setNeedsDisplayInRect(const IntRect& rect)
@@ -125,7 +125,8 @@ void TileController::setContentsScale(float scale)
     if (m_zoomedOutTileGrid && m_zoomedOutTileGrid->scale() == scale) {
         m_tileGrid = WTF::move(m_zoomedOutTileGrid);
         m_tileGrid->setIsZoomedOutTileGrid(false);
-        m_tileGrid->revalidateTiles(0);
+        m_tileGrid->revalidateTiles();
+        tileGridsChanged();
         return;
     }
 
@@ -133,6 +134,7 @@ void TileController::setContentsScale(float scale)
         m_zoomedOutTileGrid = WTF::move(m_tileGrid);
         m_zoomedOutTileGrid->setIsZoomedOutTileGrid(true);
         m_tileGrid = std::make_unique<TileGrid>(*this);
+        tileGridsChanged();
     }
 
     tileGrid().setScale(scale);
@@ -161,7 +163,7 @@ void TileController::setZoomedOutContentsScale(float scale)
     m_zoomedOutContentsScale = scale;
 
     if (m_zoomedOutTileGrid && m_zoomedOutTileGrid->scale() != m_zoomedOutContentsScale)
-        m_zoomedOutTileGrid = nullptr;
+        clearZoomedOutTileGrid();
 }
 
 void TileController::setAcceleratesDrawing(bool acceleratesDrawing)
@@ -261,7 +263,7 @@ void TileController::setTileCoverage(TileCoverage coverage)
 void TileController::revalidateTiles()
 {
     ASSERT(owningGraphicsLayer()->isCommittingChanges());
-    tileGrid().revalidateTiles(0);
+    tileGrid().revalidateTiles();
 }
 
 void TileController::forceRepaint()
@@ -426,6 +428,17 @@ bool TileController::shouldTemporarilyRetainTileCohorts() const
     return owningGraphicsLayer()->platformCALayerShouldTemporarilyRetainTileCohorts(m_tileCacheLayer);
 }
 
+void TileController::clearZoomedOutTileGrid()
+{
+    m_zoomedOutTileGrid = nullptr;
+    tileGridsChanged();
+}
+
+void TileController::tileGridsChanged()
+{
+    return owningGraphicsLayer()->platformCALayerCustomSublayersChanged(m_tileCacheLayer);
+}
+
 void TileController::tileRevalidationTimerFired()
 {
     if (!owningGraphicsLayer())
@@ -436,7 +449,7 @@ void TileController::tileRevalidationTimerFired()
         return;
     }
     // If we are not visible get rid of the zoomed-out tiles.
-    m_zoomedOutTileGrid = nullptr;
+    clearZoomedOutTileGrid();
 
     TileGrid::TileValidationPolicy validationPolicy = (shouldAggressivelyRetainTiles() ? 0 : TileGrid::PruneSecondaryTiles) | TileGrid::UnparentAllTiles;
 
